--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 #bball-court {
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPibPGFI5A0dUOYdKR2VqQ9rfadPXRvEA_BQ&usqp=CAU');
+    background-image: url('https://media.istockphoto.com/photos/basketball-light-arena-picture-id518502541?k=6&m=518502541&s=612x612&w=0&h=qYq-z4qhyL3PCBKv00sW3qUQj4i6ghEuoiT_KHRMKUQ=');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 400px;
